--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="assets/icon-512.png" sizes="any">
+  <link rel="apple-touch-icon" href="assets/icon-180.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Mikr.us PWA app</title>
   </head>
   <body>
     <div id="root"></div>
